# pipdep

./: generate_environment.py  generate_profiles.py  pyproject.toml
config/: index.yml  pypi.yml
environments/: lin_ppc64le_3.11.json  lin_ppc64le_3.12.json
pipdep/: __main__.py  pipdep.py
profiles/: lin_aarch64_3_11  lin_aarch64_3_12  lin_amd64_3_11  lin_amd64_3_12  lin_ppc64le_3_11  lin_ppc64le_3_12  lin_s390x_3_11  lin_s390x_3_12
