[build-system]
requires = ["setuptools>=80"] # Ensure setuptools is in your build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pipdep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4[lxml]>=4.13.4",
    "packaging>=25.0",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
]

[project.scripts]
pipdep = "pipdep.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipdep*"]
exclude = ["config*", "environments*", "profiles*"]

